<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">



    <Button
        android:id ="@+id/contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beton"
        android:textSize="26sp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
         />

    <ImageView
        android:id = "@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src = "@drawable/logo_big"
        android:layout_gravity="center_horizontal">
    </ImageView>

    <Button
        android:id ="@+id/spisok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:text = "@string/spisok">
    </Button>

    <Button
        android:id ="@+id/beton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:text = "@string/Choose_beton">
    </Button>

    <Button
        android:id ="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:text = "@string/calculator">
    </Button>

    <Button
        android:id ="@+id/maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        android:text = "@string/location">
    </Button>



</LinearLayout>

</ScrollView>