<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/toast1"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_width="197dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3"
        tools:layout_editor_absoluteX="49dp" />


    <EditText
        android:id="@+id/editText1"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/length"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="52dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/breigth"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        tools:layout_editor_absoluteX="52dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText3"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/heigth"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal2"
        tools:layout_editor_absoluteX="52dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/summText"
        android:layout_gravity="center"
        android:hint ="@string/concrete"
        android:textSize="24sp"
        android:layout_width="197dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal3"
        tools:layout_editor_absoluteX="49dp" />

    <Button
        android:id="@+id/summ"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/ob"/>


</LinearLayout>