<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ic_launcher_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="24dp"
        android:text="@string/cont"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="24dp"
        android:text="@string/manager"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp">
    </TextView>

    <TextView
        android:id="@+id/callButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="+375445555555"
        android:textSize="30sp">

    </TextView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="24dp"
        android:text="@string/dispetcher"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp">
    </TextView>


    <TextView
        android:id="@+id/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="sasaska@mail.ru"
        android:textSize="30sp">

    </TextView>


</LinearLayout>